--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -63,7 +63,7 @@
                     <TextBlock x:Name="SubjectLabel" Text="" FontSize="50" Grid.Row="0" Margin="0,0,0,0" Grid.ColumnSpan="3" Foreground="White" />
                     <TextBlock x:Name="EndUserLabel" Text="" FontSize="40" Grid.Row="1" Foreground="White" />
                     <TextBlock Text="Initial Post" HorizontalAlignment="Left" Canvas.ZIndex="1" Grid.Row="1" Grid.Column="2" Margin="12,10,0,0" FontSize="25" Foreground="White" />
-                    <Button x:Name="AddResponseButton" Content="Add Response" Tag="123" HorizontalAlignment="Left" Canvas.ZIndex="1" Grid.Row="1" Grid.Column="3" Margin="12,10,0,0" FontSize="20" Foreground="White" Tapped="AddResponseButton_Tapped" />
+                    <Button x:Name="AddResponseButton" Content="Add Response" HorizontalAlignment="Left" Canvas.ZIndex="1" Grid.Row="1" Grid.Column="3" Margin="12,10,0,0" FontSize="20" Foreground="White" Tapped="AddResponseButton_Tapped" />
                     <Ellipse Fill="#7F739CB0" HorizontalAlignment="Left" Canvas.ZIndex="0" Grid.Row="1" Grid.Column="2" Height="36" Margin="0,10,0,0" VerticalAlignment="Top" Width="139"  RenderTransformOrigin="0.459,0.468"/>
                     <ScrollViewer VerticalAlignment="Stretch" Grid.ColumnSpan="3" Grid.Row="3" Margin="0,4,0,61" MaxHeight="150" Width="550" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
                         <TextBlock x:Name="InitialPostLabel" Text="" Margin="0,0,18,0" TextWrapping="Wrap" FontSize="25" Foreground="White" />
