--- a/SherpaDesk/Timesheet.xaml
+++ b/SherpaDesk/Timesheet.xaml
@@ -131,7 +131,8 @@
 
                     <TextBlock HorizontalAlignment="left" Grid.Row="7" Margin="10,10,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="24" />
                     <TextBox x:Name="HoursTextBox" Margin="0,5,0,0" HorizontalAlignment="Left" Height="35" InputScope="NumberFullWidth" Text="0.00" Grid.Row="7" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" Width="130" />
-
+                    <TextBlock x:Name="ErrorHours" Grid.Column="2" HorizontalAlignment="Left" Margin="0 0 0 0" Grid.Row="7" Height="50" VerticalAlignment="Top"/>
+                    
                     <TextBlock HorizontalAlignment="left" Grid.Row="8" Margin="10,10,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="24" />
                     <TextBox x:Name="NoteTextBox" Margin="0,5,0,0" HorizontalAlignment="Stretch" Height="100" InputScope="NumberFullWidth" Grid.Row="8" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" />
 
