--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -35,27 +35,10 @@
                                 <VisualStateGroup x:Name="CommonStates">
                                     <VisualState x:Name="Normal"/>
                                     <VisualState x:Name="PointerOver">
-
                                     </VisualState>
                                     <VisualState x:Name="Pressed">
-                                        <Storyboard>
-                                            <PointerDownThemeAnimation TargetName="ContentContainer"/>
-                                        </Storyboard>
                                     </VisualState>
                                     <VisualState x:Name="PointerOverPressed">
-                                        <Storyboard>
-                                            <PointerDownThemeAnimation TargetName="ContentContainer"/>
-                                            <DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="Opacity" Storyboard.TargetName="PointerOverBorder"/>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Fill" Storyboard.TargetName="SelectionBackground">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource ListViewItemSelectedPointerOverBackgroundThemeBrush}"/>
-                                            </ObjectAnimationUsingKeyFrames>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Stroke" Storyboard.TargetName="SelectedBorder">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource ListViewItemSelectedPointerOverBorderThemeBrush}"/>
-                                            </ObjectAnimationUsingKeyFrames>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Fill" Storyboard.TargetName="SelectedEarmark">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource ListViewItemSelectedPointerOverBackgroundThemeBrush}"/>
-                                            </ObjectAnimationUsingKeyFrames>
-                                        </Storyboard>
                                     </VisualState>
                                     <VisualState x:Name="Disabled">
                                         <Storyboard>
@@ -304,7 +287,6 @@
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
             <Frame x:Name="ResponseFrame" Margin="0,0,0,0" />
-            <Button x:Name="AddResponseButton" Content="Add Response" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Canvas.ZIndex="1" Grid.Row="0" Margin="0,200,130,0" FontSize="20" Foreground="White" Tapped="AddResponseButton_Tapped" />
             <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="240"/>
@@ -316,66 +298,91 @@
                     </Grid.ColumnDefinitions>
                     <TextBlock x:Name="pageTitle" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,30" Style="{StaticResource PageHeaderTextStyle}" Text="Ticket Details" FontWeight="Normal"/>
                 </Grid>
-                <ScrollViewer Height="540" VerticalScrollMode="Auto" HorizontalScrollMode="Disabled" Width="auto" Grid.Row="1">
-                    <GridView x:Name="TicketDetailsList" ItemContainerStyle="{StaticResource GridViewItemStyle1}" SelectionMode="None">
-                        <GridView.ItemTemplate>
-                            <DataTemplate>
-                                <Grid MinWidth="700">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="auto" />
-                                        <RowDefinition Height="auto" />
-                                        <RowDefinition Height="auto" />
-                                        <RowDefinition Height="auto" />
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="auto" />
-                                        <ColumnDefinition Width="10" />
-                                        <ColumnDefinition Width="auto" />
-                                        <ColumnDefinition Width="auto" />
-                                        <ColumnDefinition Width="auto" />
-                                    </Grid.ColumnDefinitions>
-                                    <Rectangle x:Name="SubjectDecorate" Grid.ColumnSpan="5" Fill="#4C8787FE" HorizontalAlignment="Stretch" Margin="-30,0,10,0" />
-                                    <TextBlock x:Name="SubjectLabel" Text="{Binding Subject}" FontSize="50" Grid.Row="0" Margin="0,0,0,0" Grid.ColumnSpan="3" Foreground="White" />
-                                    <TextBlock x:Name="EndUserLabel" Text="{Binding UserFullName}" FontSize="40" Grid.Row="1" Foreground="White" />
-                                    <TextBlock Text="Initial Post" HorizontalAlignment="Left" Canvas.ZIndex="1" Grid.Row="1" Grid.Column="2" Margin="12,10,0,0" FontSize="25" Foreground="White" />
-                                    <Ellipse Fill="#7F739CB0" HorizontalAlignment="Left" Canvas.ZIndex="0" Grid.Row="1" Grid.Column="2" Height="36" Margin="0,10,0,0" VerticalAlignment="Top" Width="139"  RenderTransformOrigin="0.459,0.468"/>
-                                    <ScrollViewer VerticalAlignment="Stretch" Grid.ColumnSpan="3" Grid.Row="3" Margin="0,4,0,61" MaxHeight="150" Width="550" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible">
-                                        <TextBlock x:Name="InitialPostLabel" Text="{Binding InitialPost}" Margin="0,0,18,0" TextWrapping="Wrap" FontSize="25" Foreground="White" />
-                                    </ScrollViewer>
-                                    <TextBlock x:Name="FilesLabel" Visibility="Collapsed" Text="Following file was uploaded:" Grid.ColumnSpan="3" FontSize="30" Grid.Row="3" Margin="0,160,0,0" Foreground="White" />
-                                    <FlipView x:Name="AttachedView" Visibility="Collapsed" Grid.Row="4" HorizontalAlignment="Left" Margin="0,0,0,0" Width="300" Height="200">
-                                        <FlipView.ItemTemplate>
-                                            <DataTemplate>
-                                                <Border BorderBrush="DarkGray" BorderThickness="1,1,1,1">
-                                                    <Grid>
-                                                        <Image Source="{Binding Image}" Margin="0" Stretch="Uniform"  />
-                                                        <TextBlock Text="{Binding FileName}" Margin="5,5,0,0" FontSize="10" Foreground="LightBlue" />
-                                                    </Grid>
-                                                </Border>
-                                            </DataTemplate>
-                                        </FlipView.ItemTemplate>
-                                    </FlipView>
-                                    <telerikPrimitives:RadPaginationControl Visibility="Collapsed" HorizontalAlignment="Left" x:Name="AttachedPages" DisplayMode="IndexLabel" ScrollViewer.HorizontalScrollMode="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="4" Width="300" Margin="10,220,0,0" Foreground="White" PageProvider="{Binding ElementName=AttachedView}" />
-                                    <Grid Grid.Column="4" Grid.Row="1" Grid.RowSpan="4" MaxWidth="500" Canvas.ZIndex="1" Margin="10,10,20,10">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition />
-                                        </Grid.ColumnDefinitions>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
+                    </Grid.ColumnDefinitions>
+                    <Grid MinWidth="700">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="10" />
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <Rectangle x:Name="SubjectDecorate" Grid.ColumnSpan="5" Fill="#4C8787FE" HorizontalAlignment="Stretch" Margin="-30,0,10,0" />
+                        <Button x:Name="AddResponseButton" Visibility="Visible" Content="Add Response" Grid.ColumnSpan="5" HorizontalAlignment="Right" VerticalAlignment="Top" Canvas.ZIndex="1" Margin="0,-50,7,0" FontSize="20" Foreground="White" Tapped="AddResponseButton_Tapped" />
+                        <TextBlock x:Name="SubjectLabel" FontSize="50" Grid.Row="0" Margin="0,0,0,0" Grid.ColumnSpan="3" Foreground="White" />
+                        <TextBlock x:Name="EndUserLabel" FontSize="40" Grid.Row="1" Foreground="White" />
+                        <TextBlock Text="Initial Post" HorizontalAlignment="Left" Canvas.ZIndex="1" Grid.Row="1" Grid.Column="2" Margin="12,10,0,0" FontSize="25" Foreground="White" />
+                        <Ellipse Fill="#7F739CB0" HorizontalAlignment="Left" Canvas.ZIndex="0" Grid.Row="1" Grid.Column="2" Height="36" Margin="0,10,0,0" VerticalAlignment="Top" Width="139"  RenderTransformOrigin="0.459,0.468"/>
+                        <ScrollViewer VerticalAlignment="Stretch" Grid.ColumnSpan="3" Grid.Row="3" Margin="0,4,0,61" MaxHeight="150" Width="550" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible">
+                            <TextBlock x:Name="InitialPostLabel" Margin="0,0,18,0" TextWrapping="Wrap" FontSize="25" Foreground="White" />
+                        </ScrollViewer>
+                        <TextBlock x:Name="FilesLabel" Visibility="Collapsed" Text="Following file was uploaded:" Grid.ColumnSpan="3" FontSize="30" Grid.Row="3" Margin="0,160,0,0" Foreground="White" />
+                        <FlipView x:Name="AttachedView" Visibility="Collapsed" Grid.Row="4" HorizontalAlignment="Left" Margin="0,0,0,0" Width="300" Height="200">
+                            <FlipView.ItemTemplate>
+                                <DataTemplate>
+                                    <Border BorderBrush="DarkGray" BorderThickness="1,1,1,1">
+                                        <Grid>
+                                            <Image Source="{Binding Image}" Margin="0" Stretch="Uniform"  />
+                                            <TextBlock Text="{Binding FileName}" Margin="5,5,0,0" FontSize="10" Foreground="LightBlue" />
+                                        </Grid>
+                                    </Border>
+                                </DataTemplate>
+                            </FlipView.ItemTemplate>
+                        </FlipView>
+                        <telerikPrimitives:RadPaginationControl Visibility="Collapsed" HorizontalAlignment="Left" x:Name="AttachedPages" DisplayMode="IndexLabel" ScrollViewer.HorizontalScrollMode="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="4" Width="300" Margin="10,220,0,0" Foreground="White" PageProvider="{Binding ElementName=AttachedView}" />
+                        <Grid Grid.Column="4" Grid.Row="1" Grid.RowSpan="4" MaxWidth="500" Canvas.ZIndex="1" Margin="10,10,20,10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <ScrollViewer VerticalAlignment="Stretch" MaxHeight="350" Margin="0,0,0,50" Grid.RowSpan="3" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
+                                <TextBlock x:Name="WorkpadLabel" MaxWidth="500" Margin="0,0,18,0" VerticalAlignment="Stretch" TextWrapping="WrapWholeWords" HorizontalAlignment="Left" Text="" Foreground="White" FontSize="20" />
+                            </ScrollViewer>
+                        </Grid>
+                    </Grid>
+                    <ScrollViewer Height="540" VerticalScrollMode="Auto" Grid.Column="1" HorizontalScrollMode="Disabled" Width="700">
+                        <GridView x:Name="TicketDetailsList" IsTapEnabled="False" ItemContainerStyle="{StaticResource GridViewItemStyle1}" Grid.Column="1" SelectionMode="None">
+                            <GridView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid HorizontalAlignment="Stretch">
                                         <Grid.RowDefinitions>
+                                            <RowDefinition Height="auto" />
+                                            <RowDefinition Height="auto" />
                                             <RowDefinition Height="auto" />
                                             <RowDefinition Height="auto" />
                                             <RowDefinition Height="*" />
                                         </Grid.RowDefinitions>
-                                        <ScrollViewer VerticalAlignment="Stretch" MaxHeight="350" Margin="0,0,0,50" Grid.RowSpan="3" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
-                                            <TextBlock x:Name="WorkpadLabel" MaxWidth="500" Margin="0,0,18,0" VerticalAlignment="Stretch" TextWrapping="WrapWholeWords" HorizontalAlignment="Left" Text="" Foreground="White" FontSize="20" />
-                                        </ScrollViewer>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto" />
+                                            <ColumnDefinition Width="10" />
+                                            <ColumnDefinition Width="auto" />
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock FontSize="40" Text="{Binding FullName}" Grid.Row="0" Foreground="White" />
+                                        <Ellipse Fill="#7F739CB0" HorizontalAlignment="Left" Canvas.ZIndex="0" Grid.Row="0" Grid.Column="2" Height="36" Margin="0,10,0,0" VerticalAlignment="Top" Width="139"  RenderTransformOrigin="0.459,0.468"/>
+                                        <TextBlock Text="{Binding NoteType}" HorizontalAlignment="Left" Canvas.ZIndex="1" Grid.Row="0" Grid.Column="2" Margin="12,10,0,0" FontSize="25" Foreground="White" />
+                                        <TextBlock Text="{Binding ResponseDateText}" HorizontalAlignment="Right" Grid.Column="2" Canvas.ZIndex="1" Grid.Row="1" Margin="0,-10,0,0" FontSize="18" Foreground="White" />
+                                        <TextBlock Text="{Binding NoteText}" HorizontalAlignment="Stretch" Width="500" TextWrapping="Wrap" Grid.ColumnSpan="3" Grid.Row="2" Margin="0,10,0,50" FontSize="18" Foreground="White" />
                                     </Grid>
-                                </Grid>
-                            </DataTemplate>
-                        </GridView.ItemTemplate>
-
-                    </GridView>
-                </ScrollViewer>
+                                </DataTemplate>
+                            </GridView.ItemTemplate>
+                        </GridView>
+                    </ScrollViewer>
+                </Grid>
             </Grid>
             <VisualStateManager.VisualStateGroups>
 
