AutoComplete for Add Ticket

--- a/SherpaDesk/App.xaml
+++ b/SherpaDesk/App.xaml
@@ -6,6 +6,7 @@
 
     <Application.Resources>
         <ResourceDictionary>
+            <ResourceDictionary x:Key="CommonResources" Source="CommonResources.xaml" />
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Common/StandardStyles.xaml"/>
                 <ResourceDictionary Source="ms-appx:///Telerik.UI.Xaml.Primitives/Themes/ThemeColorsLight.xaml"/>
@@ -13,7 +14,6 @@
                 <ResourceDictionary Source="ms-appx:///Telerik.UI.Xaml.Grid/Themes/ThemeResourcesLight.xaml"/>
                 <ResourceDictionary Source="ms-appx:///Telerik.UI.Xaml.Input/Themes/ThemeResourcesLight.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-
         </ResourceDictionary>
     </Application.Resources>
 </Application>
