--- a/SherpaDesk/WorkList.xaml
+++ b/SherpaDesk/WorkList.xaml
@@ -5,6 +5,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SherpaDesk"
+    xmlns:model="using:SherpaDesk.Models"
     xmlns:common="using:SherpaDesk.Common"
     xmlns:Controls="using:WinRTXamlToolkit.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -16,8 +17,6 @@
     mc:Ignorable="d" Loaded="pageRoot_Loaded">
 
     <Page.Resources>
-
-        <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
         <x:String x:Key="AppName">My Application</x:String>
     </Page.Resources>
 
@@ -27,6 +26,9 @@
         * Row 1 contains the rest of the page layout
     -->
     <Grid x:Name="grid" Style="{StaticResource LayoutRootStyle}" Background="Transparent" RequestedTheme="Light">
+        <Grid.Resources>
+            <model:WorkListViewModel x:Key="Model" x:Name="Model" />
+        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="auto" />
@@ -53,12 +55,12 @@
                     </MenuFlyout>
                 </Button.Flyout>
             </Button>
-            <Button x:Name="PagePrev" Grid.Column="1" Content="Page Prev" Margin="0,232,10,0" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Top" RenderTransformOrigin="0,0" Foreground="White" Background="#FF4E7492" BorderBrush="#FF004174" FontWeight="Normal" Click="PagePrev_Click">
+            <Button x:Name="PagePrev" IsEnabled="{Binding PagePrevEnabled, Source={StaticResource Model}}" Grid.Column="1" Content="Page Prev" Margin="0,232,10,0" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Top" RenderTransformOrigin="0,0" Foreground="White" Background="#FF4E7492" BorderBrush="#FF004174" FontWeight="Normal" Click="PagePrev_Click">
             </Button>
-            <Button x:Name="PageNext" Grid.Column="2" Content="Page Next" Margin="10,232,0,0" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0,0" Foreground="White" Background="#FF4E7492" BorderBrush="#FF004174" FontWeight="Normal" Click="PageNext_Click">
+            <Button x:Name="PageNext" IsEnabled="{Binding PagePrevEnabled, Source={StaticResource Model}}" Grid.Column="2" Content="Page Next" Margin="10,232,0,0" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0,0" Foreground="White" Background="#FF4E7492" BorderBrush="#FF004174" FontWeight="Normal" Click="PageNext_Click">
             </Button>
         </Grid>
-        <telerik:RadDataGrid  x:Name="ItemsGrid" Height="500" ScrollViewer.VerticalScrollMode="Auto" UserGroupMode="Disabled" Grid.Column="1" Grid.Row="1" AutoGenerateColumns="False" UserColumnReorderMode="None" UserFilterMode="Enabled" UserSortMode="Single" GridLinesVisibility="Horizontal" BorderBrush="#FF006AC1" SelectionMode="None" IncrementalLoadingMode="Explicit">
+        <telerik:RadDataGrid  x:Name="ItemsGrid" ItemsSource="{Binding Path=Data, Source={StaticResource Model}}" Height="500" ScrollViewer.VerticalScrollMode="Auto" UserGroupMode="Disabled" Grid.Column="1" Grid.Row="1" AutoGenerateColumns="False" UserColumnReorderMode="None" UserFilterMode="Enabled" UserSortMode="Single" GridLinesVisibility="Horizontal" BorderBrush="#FF006AC1" SelectionMode="None" IncrementalLoadingMode="Explicit">
             <telerik:RadDataGrid.Columns>
                 <telerik:DataGridTemplateColumn Width="50">
                     <telerik:DataGridTemplateColumn.HeaderStyle>
