--- a/SherpaDesk/TimesheetResources.xaml
+++ b/SherpaDesk/TimesheetResources.xaml
@@ -4,6 +4,7 @@
     xmlns:local="using:SherpaDesk.Common">
 
     <local:CellModelToTimeLogConverter x:Key="timeLogConverter" />
+    <local:CellModelToTimeLogYearConverter x:Key="timeLogYearConverter" />
 
     <DataTemplate x:Key="template">
         <Grid>
@@ -11,5 +12,13 @@
             <TextBlock Text="{Binding Label}" Foreground="#FF767676" FontSize="13.333" VerticalAlignment="Bottom" Margin="6,0,0,4" />
         </Grid>
     </DataTemplate>
-    <local:CustomStyleSelector x:Key="selector" EventTemplate="{StaticResource template}" />
+
+    <DataTemplate x:Key="year">
+        <Grid>
+            <TextBlock Foreground="Black" Text="{Binding Converter={StaticResource timeLogYearConverter}}" FontSize="15" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,0,10" />
+            <TextBlock Text="{Binding Label}" Foreground="#FF767676" FontSize="13.333" VerticalAlignment="Bottom" Margin="6,0,0,4" />
+        </Grid>
+    </DataTemplate>
+
+    <local:CustomStyleSelector x:Key="selector" EventTemplate="{StaticResource template}" YearTemplate="{StaticResource year}" />
 </ResourceDictionary>
