--- a/SherpaDesk/Styles/TimesheetResources.xaml
+++ b/SherpaDesk/Styles/TimesheetResources.xaml
@@ -1,10 +1,11 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:telerikCalendar ="using:Telerik.UI.Xaml.Controls.Input.Calendar"
+    xmlns:model="using:SherpaDesk.Models"
     xmlns:local="using:SherpaDesk.Common">
 
     <local:CellModelToTimeLogConverter x:Key="timeLogConverter" />
-
     <DataTemplate x:Key="template">
         <Grid>
             <TextBlock Foreground="Black" Text="{Binding Converter={StaticResource timeLogConverter}}" FontSize="15" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,0,10" />
