--- a/SherpaDesk/Timesheet.xaml
+++ b/SherpaDesk/Timesheet.xaml
@@ -6,6 +6,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SherpaDesk"
     xmlns:common="using:SherpaDesk.Common"
+    xmlns:model="using:SherpaDesk.Models"
     xmlns:Controls="using:WinRTXamlToolkit.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:telerikInput ="using:Telerik.UI.Xaml.Controls.Input"
@@ -17,7 +18,7 @@
     mc:Ignorable="d" Loaded="pageRoot_Loaded">
 
     <Page.Resources>
-        <ResourceDictionary Source="TimesheetResources.xaml"/>
+        <ResourceDictionary Source="Styles/TimesheetResources.xaml"/>
     </Page.Resources>
 
     <!--
@@ -26,6 +27,9 @@
         * Row 1 contains the rest of the page layout
     -->
     <Grid Style="{StaticResource LayoutRootStyle}" Background="Transparent">
+        <Grid.Resources>
+            <model:TimesheetViewModel x:Key="Model" x:Name="Model" />
+        </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="240"/>
             <RowDefinition Height="*"/>
@@ -60,8 +64,12 @@
                 <ColumnDefinition Width="30" />
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
-            <telerikInput:RadCalendar SelectionMode="Single" CellStyleSelector="{StaticResource selector}" x:Name="TimesheetCalendar" Margin="0,0,0,28" 
-                RequestedTheme="Light" Background="White" VerticalAlignment="Bottom" Height="500" SelectionChanged="TimesheetCalendar_SelectionChanged">
+            <telerikInput:RadCalendar SelectionMode="Single" x:Name="TimesheetCalendar" Margin="0,0,0,28" 
+                RequestedTheme="Light" Background="White" VerticalAlignment="Bottom" Height="500" 
+                                      SelectionChanged="TimesheetCalendar_SelectionChanged"
+                                      CellStyleSelector="{StaticResource selector}"  
+                                      DataContext="{StaticResource Model}" 
+                                      DisplayDate="{Binding CurrentDate, Mode=TwoWay}">
             </telerikInput:RadCalendar>
             <Grid Grid.Column="2">
                 <Grid.ColumnDefinitions>
@@ -75,9 +83,8 @@
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
                 <TextBlock x:Name="DateLabel" Grid.Column="0" FontSize="40" />
-                <telerikInput:RadDatePicker x:Name="DateField" Grid.Column="2" 
-                                            Height="60" Width="30" FontSize="40" Grid.Row="0" DisplayValueFormat="dddd, MMMM dd, yyyy" 
-                                            ItemLength="90" Margin="0,-10,0,0" ValueChanged="DateField_ValueChanged" />
+                <telerikInput:RadDatePicker x:Name="DateField" Grid.Column="2" Height="60" Width="30" FontSize="40" Grid.Row="0" DisplayValueFormat="dddd, MMMM dd, yyyy" 
+                                            ItemLength="90" Margin="1,-10,0,0" Grid.ColumnSpan="2" ValueChanged="DateField_ValueChanged" />
 
                 <Grid Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Width="570">
                     <Grid.ColumnDefinitions>
@@ -134,7 +141,7 @@
                     <TextBlock HorizontalAlignment="left" Grid.Row="7" Margin="10,10,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="24" />
                     <TextBox x:Name="HoursTextBox" Margin="0,5,0,0" HorizontalAlignment="Left" Height="35" InputScope="NumberFullWidth" Text="0.00" Grid.Row="7" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" Width="130" />
                     <TextBlock x:Name="ErrorHours" Grid.Column="2" HorizontalAlignment="Left" Margin="0 0 0 0" Grid.Row="7" Height="50" VerticalAlignment="Top"/>
-                    
+
                     <TextBlock HorizontalAlignment="left" Grid.Row="8" Margin="10,10,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="24" />
                     <TextBox x:Name="NoteTextBox" Margin="0,5,0,0" HorizontalAlignment="Stretch" Height="100" InputScope="NumberFullWidth" Grid.Row="8" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" />
 
